# cuba

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.continue/checks/: reinventing-the-wheel.md
cuba-cli/: .gitignore  Cargo.toml  README.md
cuba-cli/src/: cli_cmds.rs  console_out.rs  main.rs  msg_file_logger.rs  progress_bars.rs
cuba-gui/: .gitignore  Cargo.toml  README.md  build.rs
cuba-gui/assets/fonts/: OFL.txt
cuba-gui/src/: about.rs  backup_view.rs  config_view.rs  egui_widgets.rs  keyring_view.rs  main.rs  msg_log_views.rs  password_ids.rs  restore_view.rs  task_progress.rs  util.rs
cuba-lib/: Cargo.toml  README.md
cuba-lib/src/: lib.rs
cuba-lib/src/core/: backup.rs  clean.rs  cuba.rs  glob_matcher.rs  keyring.rs  mod.rs  password_cache.rs  restore.rs  transferred_node.rs
cuba-lib/src/core/fs/: fs_base.rs  fs_metadata.rs  fs_node.rs  fs_symlink_meta.rs  local_fs.rs  mod.rs  null_fs.rs  webdav_fs.rs
cuba-lib/src/core/process_data/: age_procs.rs  cipher.rs  cipher_procs.rs  data_processor.rs  gz_procs.rs  mod.rs  signature_proc.rs
cuba-lib/src/core/tasks/: directory_backup_task.rs  directory_restore_task.rs  file_backup_task.rs  file_restore_task.rs  mod.rs  node_verify_task.rs  symlink_backup_task.rs  symlink_restore_task.rs  task_helpers.rs
cuba-lib/src/shared/: clean_message.rs  config.rs  config_writer.rs  message.rs  mod.rs  msg_dispatcher.rs  npath.rs  progress_message.rs  task_message.rs
src/: lib.rs  main.rs
src/cli/: cli_cmds.rs  console_out.rs  file_logger.rs  mod.rs  msg_file_logger.rs  progress_bars.rs
src/core/: api.rs  backup.rs  clean.rs  cuba_json.rs  glob_matcher.rs  keyring.rs  mod.rs  password_cache.rs  restore.rs  run_state.rs  transferred_node.rs  util.rs  verify.rs
src/core/fs/: fs_base.rs  local_fs.rs  mod.rs  null_fs.rs  webdav_fs.rs
src/core/process_data/: cipher_procs.rs  signature_proc.rs
src/core/tasks/: directory_backup_task.rs  file_backup_task.rs  node_verify_task.rs  task_helpers.rs  task_worker.rs
src/shared/: clean_message.rs  config.rs  message.rs  mod.rs  msg_receiver.rs  npath.rs  progress_message.rs  task_message.rs
workflows/: build.yml
