[package]
name = "cuba"
version = "0.1.0"
edition = "2024"
description = "A lightweight backup tool"
documentation = "https://docs.rs/cuba"
repository = "https://github.com/zarniwp/cuba"
homepage = "https://github.com/zarniwp/cuba/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["backup"]

[[bin]]
name = "cuba"
path = "src/main.rs"

[dependencies]
chrono = "0.4.41"
crossbeam-channel = "0.5.15"
flate2 = "1.1.1"
keyring = { version = "3.6.2", features =  ["apple-native", "windows-native", "sync-secret-service"] } 
reqwest = { version = "0.12.15", features = ["blocking"] }
quick-xml = "0.38.1"
percent-encoding = "2.3.1"
thiserror = "2.0.12"
serde = "1.0.219"
rand = "0.9.1"
argon2 = "0.5.3"
serde_json = "1.0.140"
globset = "0.4.16"
age = "0.11.1"
lazy_static = "1.5.0"
aes-gcm = "0.10.3"
trait-set = "0.3.0"
url = "2.5.7"
unicode-normalization = "0.1.24"
warned = "0.1.1"
serde_with = "3.14.0"
blake3 = "1.8.2"
bitflags = { version = "2.10.0", features = ["serde"] }
regex = "1.12.2"
strum_macros = "0.27.2"
once_cell = "1.21.3"
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.1"
flexi_logger = "0.31.7"
log = "0.4.28"
inquire = "0.9.1"
indicatif = "0.18.3"
toml = "0.9.8"
secrecy = "0.10.3"
