[package]
name = "cuba-cli"
version = "0.1.0"
description = "Command-line interface for Cuba"
readme = "../README.md"
keywords = ["backup", "cli"]
categories = ["command-line-utilities"]

authors.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[[bin]]
name = "cuba"
path = "src/main.rs"

[dependencies]
cuba-lib = { path = "../cuba-lib" }
crossbeam-channel = { workspace = true }
secrecy = { workspace = true }
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.1"
flexi_logger = "0.31.7"
log = "0.4.28"
inquire = "0.9.1"
indicatif = "0.18.3"