[package]
name = "cuba-gui"
version = "0.1.0"
description = "Graphical user interface for Cuba"
readme = "../README.md"
keywords = ["backup", "gui"]

authors.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[package.metadata]
assets = [
    "JetBrains Mono (SIL Open Font License 1.1)"
]

[dependencies]
cuba-lib = { path = "../cuba-lib" }
crossbeam-channel = { workspace = true }
secrecy = { workspace = true }
eframe = "0.33.3"
egui = "0.33.3"
egui_dock = { version="0.18.0", features = ["serde"] }
egui_extras = "0.33.3"
serde_json = "1.0.149"
serde = "1.0.228"
